--- a/login.html
+++ b/login.html
@@ -32,48 +32,31 @@
 	
 		<div class="form-section">
 
-			
+	
 			<div class="login-box">
-				<form action="{{ url_for('login')}}" method="post" autocomplete="on">
-				<div class="msg">{{ msg }}</div>
-				<input type="text"
-					name = "username"
-					class="name ele"
-					placeholder="your_username"
-					id="username" required>
+				<input type="email"
+					class="email ele"
+					placeholder="youremail@email.com">
 				<input type="password"
-					name = "password"
 					class="password ele"
 					placeholder="password">
 				<button class="clkbtn">Login</button>
-				</form>
 			</div>
 
 			<div class="signup-box">
-				<form action="{{ url_for('register')}}" method="post" autocomplete="off">
-				<div class="msg">{{ msg }}</div>
 				<input type="text"
-					name = "username"
 					class="name ele"
-					placeholder="Enter your name"
-					id="username" required>
-					<input type="password"
-					name = "password"
-					class="password ele"
-					placeholder="password"
-					id="password" required>
+					placeholder="Enter your name">
 				<input type="email"
-					name = "email"
 					class="email ele"
-					placeholder="youremail@email.com"
-					id="email" required>
-				<input type="text"
-					name = "phonenumber"
+					placeholder="youremail@email.com">
+				<input type="password"
 					class="password ele"
-					placeholder="Phonenumber"
-					id="phonenumber" required>
+					placeholder="password">
+				<input type="password"
+					class="password ele"
+					placeholder="Confirm password">
 				<button class="clkbtn">Signup</button>
-				</form>
 			</div>
 		</div>
 	</div>
