--- a/login.html
+++ b/login.html
@@ -63,14 +63,13 @@
 	<script src="index.js"></script>
 </body>
 <style>
-  @import url(
-"https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+ 
 
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: "Poppins", sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -81,7 +80,7 @@ body {
 	align-items: center;
 	flex-direction: column;
 	gap: 30px;
-	background-color: rgb(0, 0, 0);
+	background-color: rgb(11, 7, 28);
 }
 
 header {
@@ -91,10 +90,11 @@ header {
 	align-items: center;
 	justify-content: center;
 	gap: 8px;
+  font-family:Arial, Helvetica, sans-serif;
 }
 
 .heading {
-	color: green;
+	color: rgb(245, 86, 29);
   margin-right:750px;
   margin-top:120px;
   
@@ -108,11 +108,12 @@ header {
 .container {
 	height: 600px;
 	width: 500px;
-	background-color: white;
-	box-shadow: 8px 8px 20px rgb(128, 128, 128);
+	background-color: rgb(19, 11, 56);
+	box-shadow: 8px 8px 20px rgb(126, 68, 14);
 	position: relative;
 	overflow: hidden;
   left:400px;
+  border-radius:15px;
 
 }
 
@@ -120,7 +121,7 @@ header {
 	height: 60px;
 	width: 300px;
 	margin: 20px auto;
-	box-shadow: 10px 10px 30px rgb(0, 0, 0);
+	box-shadow: 10px 10px 30px rgb(146, 73, 13);
 	border-radius: 50px;
 	display: flex;
 	justify-content: space-around;
@@ -133,10 +134,10 @@ header {
 	font-size: 22px;
 	border: none;
 	outline: none;
-	background-color: transparent;
+	background-color:transparent;
 	position: relative;
 	cursor: pointer;
-  color:aliceblue;
+  color:rgb(249, 114, 31);
 }
 
 .slider {
@@ -144,8 +145,8 @@ header {
 	width: 150px;
 	border-radius: 50px;
 	background-image: linear-gradient(to right,
-			rgb(150, 75, 0),
-			rgb(150, 75, 0));
+			rgb(43, 47, 152),
+			rgb(32, 45, 133));
 	position: absolute;
 	top: 20px;
 	left: 100px;
@@ -195,7 +196,7 @@ header {
 	outline: none;
 	border: none;
 	color: rgb(0, 0, 0);
-	background-color: rgb(240, 240, 240);
+	background-color: rgb(52, 43, 135);
 	border-radius: 50px;
 	padding-left: 30px;
 	font-size: 18px;
@@ -206,21 +207,23 @@ header {
 	width: 150px;
 	border-radius: 50px;
 	background-image: linear-gradient(to right,
-			rgb(255, 195, 110),
-			rgb(255, 146, 91));
+			rgb(52, 70, 160),
+			rgb(52, 70, 160));
 	font-size: 22px;
 	border: none;
 	cursor: pointer;
   transition: transform 0.2s;
+  color:rgb(240, 154, 34);
+  box-shadow:10px 15px 30px rgb(143, 66, 14);;
 }
 .clkbtn:hover{
   
-  transform: scale(0.9);
+  transform:scale(0.9);
   
 
 }
 .text{
-  color: aliceblue;
+  color: rgb(171, 176, 181);
   position: absolute;
   height: 600px;
   width: 500px;
