--- a/login.html
+++ b/login.html
@@ -1,6 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="bg.css">
+  
+  </head>
+  <body>
+    <div class="container1">
+      <div class="bubbles">
+        <span style="--i:11"></span>
+        <span style="--i:12"></span>
+        <span style="--i:24"></span>
+        <span style="--i:10"></span>
+        <span style="--i:14"></span>
+        <span style="--i:23"></span>
+        <span style="--i:18"></span>
+        <span style="--i:16"></span>
+        <span style="--i:19"></span>
+        <span style="--i:20"></span>
+        <span style="--i:22"></span>
+        <span style="--i:25"></span>
+        <span style="--i:18"></span>
+        <span style="--i:21"></span>
+        <span style="--i:15"></span>
+        <span style="--i:13"></span>
+        <span style="--i:26"></span>
+        <span style="--i:17"></span>
+        <span style="--i:13"></span>
+        <span style="--i:28"></span>
+      </div>
+  
+    </div>
+  </body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
 	<meta charset="UTF-8">
 	<meta name="viewport"
 		content="width=device-width,
@@ -16,6 +51,7 @@
 
 	
 	</header>
+  
   <p class="text">
     Our website, MentorConnect.com, is a dynamic platform dedicated to fostering meaningful mentor-mentee relationships. Designed to bridge the gap between experienced professionals and eager learners, MentorConnect offers a user-friendly interface where individuals from diverse backgrounds and industries can connect, share knowledge, and grow together. Our robust matching algorithm ensures that mentees find mentors who align with their goals and aspirations, while mentors can easily identify mentees seeking guidance in their specific fields. Through personalized profiles, secure messaging, and a wealth of resources, MentorConnect empowers users to embark on transformative journeys of mentorship, unlocking their full potential and achieving their professional and personal milestones. Join us today and embark on a journey of growth and empowerment through mentorship like never before.
   </p>
@@ -62,6 +98,7 @@
 	</div>
 	<script src="index.js"></script>
 </body>
+
 <style>
  
 
@@ -91,12 +128,14 @@ header {
 	justify-content: center;
 	gap: 8px;
   font-family:Arial, Helvetica, sans-serif;
+ 
+
 }
 
 .heading {
-	color: rgb(245, 86, 29);
+	color: rgb(255, 0, 127);
   margin-right:750px;
-  margin-top:120px;
+  margin-top:20px;
   
 }
 
@@ -108,12 +147,13 @@ header {
 .container {
 	height: 600px;
 	width: 500px;
-	background-color: rgb(19, 11, 56);
-	box-shadow: 8px 8px 20px rgb(126, 68, 14);
+	background-color: rgb(29, 17, 84);
+	box-shadow: 8px 8px 20px rgb(255, 0, 127);
 	position: relative;
 	overflow: hidden;
   left:400px;
   border-radius:15px;
+  .display:flex;
 
 }
 
@@ -121,7 +161,7 @@ header {
 	height: 60px;
 	width: 300px;
 	margin: 20px auto;
-	box-shadow: 10px 10px 30px rgb(146, 73, 13);
+	box-shadow: 10px 10px 30px rgb(255, 0, 127);
 	border-radius: 50px;
 	display: flex;
 	justify-content: space-around;
@@ -137,7 +177,7 @@ header {
 	background-color:transparent;
 	position: relative;
 	cursor: pointer;
-  color:rgb(249, 114, 31);
+  color:rgb(255, 0, 127);
 }
 
 .slider {
@@ -213,8 +253,8 @@ header {
 	border: none;
 	cursor: pointer;
   transition: transform 0.2s;
-  color:rgb(240, 154, 34);
-  box-shadow:10px 15px 30px rgb(143, 66, 14);;
+  color:rgb(255, 0, 127);
+  box-shadow:10px 15px 30px rgb(255, 0, 127);;
 }
 .clkbtn:hover{
   
@@ -224,11 +264,12 @@ header {
 }
 .text{
   color: rgb(171, 176, 181);
-  position: absolute;
+  position: fixed;
   height: 600px;
   width: 500px;
   left: 150px;
   bottom: 20px;
+  
 
 
 }
