--- a/login.html
+++ b/login.html
@@ -2,7 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="bg.css">
+    <style>
+        *{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+
+}
+body{
+    min-height:100vh;
+    background:#0c192c;
+}
+.container{
+    position: relative;
+    width:100vh;
+    height:100vh;
+    overflow:hidden;
+
+}
+.bubbles{
+    position:relative;
+    display:flex;
+
+}
+.bubbles span{
+    position: relative;
+    width:30px;
+    height:30px;
+    background:#4fc3dc;
+    margin: 0 4px;
+    border-radius:50%;
+    box-shadow:0 0 0 10px #4fc3dc44,
+    0 0 50px #4fc3dc,
+    0 0 100px #4fc3dc;
+    animation:animate 15s linear infinite;
+    animation-duration:calc(125s/var(--i) );
+
+}
+.bubbles span:nth-child(even){
+    box-shadow:0 0 0 10px #ff2d7544,
+    0 0 50px #ff2d75,
+    0 0 100px #ff2d75;
+    background:#ff2d75 ;
+
+}
+@keyframes animate
+{
+    0%{
+        transform:translateY(100vh) scale(0);
+    }
+    100%{
+        transform:translateY(-10vh) scale(1);
+    }
+}
+    </style>
   
   </head>
   <body>
@@ -41,8 +94,7 @@
 		content="width=device-width,
 						initial-scale=1.0">
 	<title class="title1">Placeholder</title>
-	<link rel="stylesheet"
-		href="style.css">
+	
 </head>
 
 <body>
